styles/styles.css
.main-content{
  height: 690px;
  margin: auto;
  width: 150%;
  padding: 10px;
}

h2 {
	color: white;
	font-weight: bold;
}

.analysis, .input {
  border-radius: 25px;
}

.input{
  background-color: #00A0E8;
  height: 100%;
}

.analysis{
  background-color: #A4D800;
  height: 100%;
  max-width: 100%;
  overflow-x: hidden;
}

.container{
	width: 100%;
	height: 100%;
}

body{
  font-family: "Raleway";
  width: 960px;
  height: 500px;
  position: relative;
}

svg{
	width: 500px;
	height: 200px;
	/*width: 1000%;*/
	/*height: 1000%;*/
	/*max-width: 100%;*/

}

path.slice{
	stroke-width:2px;
	align-items: left;
}

polyline{
	opacity: .3;
	stroke: black;
	stroke-width: 2px;
	fill: none;
}
#sentiment{
	height: 900px;
	width: 400px;
}

#analyze {
	background-color: #F08D21;
}

#profile-setting {
	background-color: #00A0E8;
}

.form-control {
	width: 90%;
	height: 50%;
}

.label-primary {
	background-color: #00A0E8;
}

.label-danger {
	background-color: #F08D21;
}

.result-wrapper{
	overflow-y: scroll;
}

.word-count{
  display: inline-block;
}

